# Confectionary-Carnage

./: .gitignore  README.md  main.tf  variables.tf
.github/workflows/: deploy.yml  terraform-apply.yml
backend/: Dockerfile  README.md  app.py  app_test.py  docker-compose.yml  main.tf  pyproject.toml  tfplan  variables.tf
game/Assets/: Bullet.cs  CameraController.cs  Deparent.cs  LevelEditor.cs  Projectile.cs  WaterTile.cs
game/Documentation/: docfx.json  index.md  unity_concepts.md
game/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
game/_site/: index.html  index.json  manifest.json  toc.html  toc.json  xrefmap.yml
game/api/: .manifest  NavMeshPlus.Components.CollectObjects.yml  NavMeshPlus.Components.Editors.NavMeshAssetManager.yml  NavMeshPlus.Components.Editors.NavMeshComponentsGUIUtility.yml  NavMeshPlus.Components.Editors.yml  NavMeshPlus.Components.NavMeshLink.yml  NavMeshPlus.Components.NavMeshModifier.yml  NavMeshPlus.Components.NavMeshModifierTilemap.TileModifier.yml  NavMeshPlus.Components.NavMeshModifierTilemap.yml  NavMeshPlus.Components.NavMeshModifierVolume.yml  NavMeshPlus.Components.NavMeshSurface.yml  NavMeshPlus.Components.yml  NavMeshPlus.Extensions.AgentDefaultOverride.yml  NavMeshPlus.Extensions.AgentOverride2d.yml  NavMeshPlus.Extensions.AgentRotate2d.yml  NavMeshPlus.Extensions.CollectSources2d.yml  NavMeshPlus.Extensions.CollectSourcesCache2d.yml  NavMeshPlus.Extensions.CollectTilemapSourcesCache2d.yml  NavMeshPlus.Extensions.Editors.yml  NavMeshPlus.Extensions.yml  (+12 more)
terraform-state-setup/: main.tf
(+276 files in other folders)
